# cpp_indie_studio

./: CMakeLists.txt  IndieStudio  IndieStudio.pptx  Makefile  TODO.txt  cleanup.sh  conf.xml  display.cfg  executable  game  install.sh  resume.txt  run.sh  score.xml
cmake/Modules/: FindIrrlicht.cmake
dep/: CMakeLists.txt
dep/irrlicht/: CMakeLists.txt
include/: Core.hh  EventReceiver.hh  IMenu.hh  MainMenu.hh  Options.hh
media/: Readme.txt  config.xml  config.xml~  editundo.txt
media/Bomberman/Bomberman/: Bomberman.mtl  untitled.mtl
media/Varian/Creature/Kingvarianwrynn/: kingvarianwrynn_[0]_Stand_2366.mtl
media/WhiteBomber/: WhiteBomber.mtl
media/fontbb/: fontbb.xml
media/fonts/: fonts.xml
media/knight/source/: Untitled.b3d  knight.b3d  untitled.3ds  untitled.x3d
media/maps/: map.bbm
source/: MainMenu.cpp  Options.cpp  main.cpp
src/: CMakeLists.txt  EventReceiver.hh  EventReceiver.hpp  Game.cpp  Game.hh  Main.cpp  MainMenu.cpp  MainMenu.hh  MainMenu_tmp.cpp  Options.cpp  Options.hh  README.txt  Score.cpp  Score.hh  main_test.cpp
src/Entity/: IEntity.hpp  a.out  main_test.cpp
src/Entity/Block/: DestructibleBlock.cpp  DestructibleBlock.hpp  IBlock.hpp  IndestructibleBlock.cpp  IndestructibleBlock.hpp
src/Entity/Bomb/: IBomb.hpp  Normal.cpp  Normal.hpp
src/Entity/Character/: ICharacter.hpp  NonPlayerCharacter.cpp  NonPlayerCharacter.hpp  PlayerCharacter.cpp  PlayerCharacter.hpp
src/Entity/Powerup/: Bombup.cpp  Bombup.hpp  IPowerup.hpp
src/Game/: Game.cpp  Game.hpp
src/Map/: MapLoader.cpp  MapLoader.hpp
